// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`keyValueField > should add error with unvalidated regex 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n441"
      >
        <div
          class="uv_xf61n40 uv_xf61n42d uv_xf61n441"
        >
          <div
            class="uv_zswojs2 uv_1w3vbem0 uv_1w3vbem11"
            style="--uv_85qyp70: 1fr 1fr auto; --uv_85qyp71: 1fr 1fr auto; --uv_85qyp72: 1fr 1fr auto; --uv_85qyp73: 1fr 1fr auto; --uv_85qyp74: 1fr 1fr auto; --uv_85qyp75: 1fr 1fr auto;"
          >
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
            >
              <label
                class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
                for="_r_q_"
              >
                key
              </label>
              <div
                class="uv_12pwfcp8 uv_12pwfcp5"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  class="uv_12pwfcp9"
                  data-size="large"
                  id="_r_q_"
                  name="test.0.key"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
            >
              <label
                class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
                for="_r_10_"
              >
                value
              </label>
              <div
                class="uv_12pwfcp8 uv_12pwfcp5"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="off"
                  class="uv_12pwfcp9"
                  data-size="large"
                  id="_r_10_"
                  name="test.0.value"
                  type="text"
                  value="a"
                />
              </div>
            </div>
            <button
              class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s6 uv_8xt08se uv_8xt08sk uv_8xt08sw"
              data-testid="remove-button-0"
              type="button"
            >
              <span
                class="uv_ahdbou0"
              >
                Delete
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M5 3.25V4H2.75a.75.75 0 0 0 0 1.5h.3l.815 8.15A1.5 1.5 0 0 0 5.357 15h5.286a1.5 1.5 0 0 0 1.492-1.35l.815-8.15h.3a.75.75 0 0 0 0-1.5H11v-.75A2.25 2.25 0 0 0 8.75 1h-1.5A2.25 2.25 0 0 0 5 3.25m2.25-.75a.75.75 0 0 0-.75.75V4h3v-.75a.75.75 0 0 0-.75-.75zM6.05 6a.75.75 0 0 1 .787.713l.275 5.5a.75.75 0 0 1-1.498.075l-.275-5.5A.75.75 0 0 1 6.05 6m3.9 0a.75.75 0 0 1 .712.787l-.275 5.5a.75.75 0 0 1-1.498-.075l.275-5.5a.75.75 0 0 1 .786-.711"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="uv_xf61n40 uv_xf61n42j uv_xf61n46j"
        >
          <div
            class="uv_18qbklt5"
          >
            <button
              class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08sk uv_8xt08su"
              data-testid="add-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
              add
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`keyValueField > should disable submit button when required and empty 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n441"
      >
        <div
          class="uv_xf61n40 uv_xf61n42j uv_xf61n46j"
        >
          <button
            class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08sk uv_8xt08su"
            data-testid="add-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
      ,
      <button
        class="uv_8xt08s0 uv_8xt08s2 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08si uv_8xt08sl"
        disabled=""
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`keyValueField > should enable submit button when typing on key with regex and nothing required 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n441"
      >
        <div
          class="uv_xf61n40 uv_xf61n42d uv_xf61n441"
        >
          <div
            class="uv_zswojs2 uv_1w3vbem0 uv_1w3vbem11"
            style="--uv_85qyp70: 1fr 1fr auto; --uv_85qyp71: 1fr 1fr auto; --uv_85qyp72: 1fr 1fr auto; --uv_85qyp73: 1fr 1fr auto; --uv_85qyp74: 1fr 1fr auto; --uv_85qyp75: 1fr 1fr auto;"
          >
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
            >
              <label
                class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
                for="_r_1k_"
              >
                key
              </label>
              <div
                class="uv_12pwfcp8 uv_12pwfcp5"
                data-disabled="false"
                data-error="true"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-describedby="error-key-0"
                  aria-invalid="true"
                  class="uv_12pwfcp9"
                  data-size="large"
                  id="_r_1k_"
                  name="test.0.key"
                  type="text"
                  value="a@"
                />
                <div
                  class="uv_12pwfcp2 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
            >
              <label
                class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
                for="_r_1q_"
              >
                value
              </label>
              <div
                class="uv_12pwfcp8 uv_12pwfcp5"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="off"
                  class="uv_12pwfcp9"
                  data-size="large"
                  id="_r_1q_"
                  name="test.0.value"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <button
              class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s6 uv_8xt08se uv_8xt08sk uv_8xt08sw"
              data-testid="remove-button-0"
              type="button"
            >
              <span
                class="uv_ahdbou0"
              >
                Delete
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M5 3.25V4H2.75a.75.75 0 0 0 0 1.5h.3l.815 8.15A1.5 1.5 0 0 0 5.357 15h5.286a1.5 1.5 0 0 0 1.492-1.35l.815-8.15h.3a.75.75 0 0 0 0-1.5H11v-.75A2.25 2.25 0 0 0 8.75 1h-1.5A2.25 2.25 0 0 0 5 3.25m2.25-.75a.75.75 0 0 0-.75.75V4h3v-.75a.75.75 0 0 0-.75-.75zM6.05 6a.75.75 0 0 1 .787.713l.275 5.5a.75.75 0 0 1-1.498.075l-.275-5.5A.75.75 0 0 1 6.05 6m3.9 0a.75.75 0 0 1 .712.787l-.275 5.5a.75.75 0 0 1-1.498-.075l.275-5.5a.75.75 0 0 1 .786-.711"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
            <span
              class="uv_zswojs0 uv_1do42ls0 uv_1do42ls4 uv_1do42ls9 uv_1do42lsp uv_1do42ls1a uv_1do42ls2m"
              id="error-key-0"
              role="status"
            >
              This field should match the regex ^[a-zA-Z]*$
            </span>
          </div>
        </div>
        <div
          class="uv_xf61n40 uv_xf61n42j uv_xf61n46j"
        >
          <button
            class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08sk uv_8xt08su"
            data-testid="add-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
      ,
      <button
        class="uv_8xt08s0 uv_8xt08s2 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08si uv_8xt08sl"
        disabled=""
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`keyValueField > should render with default props & max size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n441"
      >
        <div
          class="uv_xf61n40 uv_xf61n42j uv_xf61n46j"
        >
          <div
            class="uv_18qbklt5"
          >
            <button
              class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08sk uv_8xt08su"
              data-testid="add-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
              add
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`keyValueField > should render with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n441"
      >
        <div
          class="uv_xf61n40 uv_xf61n42j uv_xf61n46j"
        >
          <div
            class="uv_18qbklt5"
          >
            <button
              class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08sk uv_8xt08su"
              data-testid="add-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
              add
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`keyValueField > should render with default props in readonly mode 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n441"
      >
        <div
          class="uv_xf61n40 uv_xf61n42j uv_xf61n46j"
        >
          <div
            class="uv_18qbklt5"
            tabindex="0"
          >
            <button
              class="uv_8xt08s0 uv_8xt08s2 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08sk uv_8xt08su"
              data-testid="add-button"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkzr"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
              add
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
